--- a/package.json
+++ b/package.json
@@ -24,9 +24,16 @@
   "homepage": "https://github.com/solointer/Cnode#readme",
   "dependencies": {
     "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "webpack": "^4.28.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
     "webpack-cli": "^3.2.0"
   }
 }
