--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": " SSR+React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config build/webpack.config.js"
+    "build:server": "webpack --config build/webpack.config.server.js",
+    "build:client": "webpack --config build/webpack.config.client.js",
+    "clear": "rimraf dist",
+    "build": "npm run clear && npm run build:client && npm run build:server",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,7 @@
   },
   "homepage": "https://github.com/solointer/Cnode#readme",
   "dependencies": {
+    "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "webpack": "^4.28.3"
@@ -34,6 +38,7 @@
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^2.6.3",
     "webpack-cli": "^3.2.0"
   }
 }
