--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hot-loader": "^4.5.3",
     "rimraf": "^2.6.3",
     "webpack-cli": "^3.2.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   }
 }
