--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:server": "webpack --config build/webpack.config.server.js",
     "build:client": "webpack --config build/webpack.config.client.js ",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/server.js",
+    "dev:server": "nodemon server/server.js",
+    "dev:server2": "cross-env NODE_ENV=development node server/server.js",
     "clear": "rimraf dist",
     "build": "npm run clear && npm run build:client && npm run build:server",
     "lint": "eslint --ext .js --ext .jsx client/",
@@ -33,6 +34,7 @@
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "serve-favicon": "^2.5.0",
     "webpack": "^4.28.3"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
     "http-proxy-middleware": "^0.19.1",
     "husky": "^1.3.1",
     "memory-fs": "^0.4.1",
+    "nodemon": "^1.18.9",
     "react-hot-loader": "^4.5.3",
     "rimraf": "^2.6.3",
     "webpack-cli": "^3.2.0",
