--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.5.0",
     "webpack": "^4.28.3"
   },
