--- a/package.json
+++ b/package.json
@@ -31,7 +31,12 @@
   "homepage": "https://github.com/solointer/Cnode#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-stage-1": "^6.24.1",
     "express": "^4.16.4",
+    "mobx": "^5.8.0",
+    "mobx-react": "^5.4.3",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
